--- a/index.html
+++ b/index.html
@@ -86,44 +86,34 @@
                                 <button id="pencil" class="tool-btn flex-col" title="Lápis"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg><span class="text-xs mt-1">Lápis</span></button>
                                 <button id="eraser" class="tool-btn flex-col" title="Borracha"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m7 21-4.3-4.3c-1-1-1-2.5 0-3.4l9.6-9.6c1-1 2.5-1 3.4 0l5.6 5.6c1 1 1 2.5 0 3.4L13 21H7Z"/><path d="M22 21H7m-5-9l5 5"/></svg><span class="text-xs mt-1">Borracha</span></button>
                                 <button id="hand" class="tool-btn flex-col" title="Mover"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 18v3.9c0 .6.6 1.1 1.2 1.1h5.5c.7 0 1.3-.5 1.3-1.1V18M8 18h9a2 2 0 0 0 2-2v-5c0-1.1-.9-2-2-2h-1.4c-.5 0-1-.2-1.3-.5L13 6.1c-.3-.4-.9-.6-1.4-.6h-1.4c-.5 0-1 .2-1.3.5l-2.6 3.4c-.3.4-.9-.6-1.4.6H4c-1.1 0-2 .9-2 2v5c0 1.1.9 2 2 2h4Z"></path></svg><span class="text-xs mt-1">Mover</span></button>
-                                <button id="glissando" class="tool-btn flex-col" title="Glissando"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="21" x2="21" y2="3"></line></svg><span class="text-xs mt-1">Glissando</span></button>
+                                <button id="line" class="tool-btn flex-col" title="Linha Reta"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="12" x2="21" y2="12"></line></svg><span class="text-xs mt-1">Linha</span></button>
                                 <button id="staccato" class="tool-btn flex-col" title="Staccato"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><circle cx="12" cy="12" r="2"></circle></svg><span class="text-xs mt-1">Staccato</span></button>
                                 <button id="percussion" class="tool-btn flex-col" title="Percussão"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg><span class="text-xs mt-1">Percussão</span></button>
                                 <button id="arpeggio" class="tool-btn flex-col" title="Arpejo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12c.83-.83 2.17-1 3-1s2.17.17 3 1 2.17 1 3 1 2.17-1 3-1 2.17.17 3 1"/></svg><span class="text-xs mt-1">Arpejo</span></button>
                                 <button id="granular" class="tool-btn flex-col" title="Nuvem Granular"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a9 9 0 1 1-9-9" /><path d="M15.12 4.19a3.9 3.9 0 0 1 3.4 1.45" /><path d="M19.78 7.32a3.9 3.9 0 0 1 1.45 3.4" /><path d="M4.19 15.12a3.9 3.9 0 0 1 1.45 3.4" /><path d="M7.32 19.78a3.9 3.9 0 0 1 3.4 1.45" /></svg><span class="text-xs mt-1">Granular</span></button>
                                 <button id="tremolo" class="tool-btn flex-col" title="Trêmolo de Frequência"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m2 8 3 3 3-6 3 6 3-6 3 6 3-3"/></svg><span class="text-xs mt-1">Trêmolo Freq.</span></button>
-                                <button id="line" class="tool-btn flex-col" title="Linha Reta"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="12" x2="21" y2="12"></line></svg><span class="text-xs mt-1">Linha</span></button>
-                                <button id="circle" class="tool-btn flex-col" title="Círculo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle></svg><span class="text-xs mt-1">Círculo</span></button>
-                                <button id="rectangle" class="tool-btn flex-col" title="Retângulo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect></svg><span class="text-xs mt-1">Retângulo</span></button>
                             </div>
                         </div>
                         <div class="sidebar-section toolbar-panel" data-panel="style">
                             <h2 class="sidebar-title">Estilo</h2>
                             <div><label for="colorPicker" class="block text-sm font-medium mb-2">Cor</label><input type="color" id="colorPicker" value="#a972ff"></div>
                             <div class="mt-4"><label for="lineWidth" class="block text-sm font-medium mb-2">Espessura / Volume</label><input type="range" id="lineWidth" min="1" max="50" value="5"></div>
+                            <h3 class="sidebar-title mt-4">Equalizador Global</h3>
+                            <div class="grid grid-cols-3 gap-2">
+                                <div><label for="bassEqGlobal" class="block text-sm font-medium mb-1">Graves</label><input type="range" id="bassEqGlobal" min="-20" max="20" value="0" step="1"></div>
+                                <div><label for="midEqGlobal" class="block text-sm font-medium mb-1">Médios</label><input type="range" id="midEqGlobal" min="-20" max="20" value="0" step="1"></div>
+                                <div><label for="trebleEqGlobal" class="block text-sm font-medium mb-1">Agudos</label><input type="range" id="trebleEqGlobal" min="-20" max="20" value="0" step="1"></div>
+                            </div>
                         </div>
                         <div class="sidebar-section toolbar-panel" data-panel="effects">
-                            <h2 class="sidebar-title">Ambiente e Efeitos</h2> <div> <label for="reverb" class="block text-sm font-medium mb-2">Reverb Global</label> <input type="range" id="reverb" min="0" max="1" value="0.1" step="0.05"> </div>
-                            <div class="mt-3"> <label for="delayTime" class="block text-sm font-medium mb-2">Tempo do Delay Global</label> <input type="range" id="delayTime" min="0" max="1" value="0.25" step="0.05"> </div>
-                            <div class="mt-3"> <label for="delayFeedback" class="block text-sm font-medium mb-2">Feedback do Delay Global</label> <input type="range" id="delayFeedback" min="0" max="0.8" value="0.3" step="0.05"> </div>
-                            
-                            <div class="mt-4">
-                                <label for="effectRange" class="block text-sm font-medium mb-2">Intensidade do Efeito</label>
-                                <input type="range" id="effectRange" min="0" max="100" value="50" step="1">
-                            </div>
-
-                            <h3 class="sidebar-title mt-4">Controles de Efeitos no Desenho</h3> <div class="grid grid-cols-1 gap-3">
+                            <h2 class="sidebar-title">Efeitos no Desenho</h2>
+                            <div class="grid grid-cols-1 gap-3">
                                 <div><label for="reverbEffect" class="block text-sm font-medium mb-1">Reverb</label><input type="range" id="reverbEffect" min="0" max="100" value="0" step="1" data-effect-type="reverbZone"></div>
                                 <div><label for="delayEffect" class="block text-sm font-medium mb-1">Delay</label><input type="range" id="delayEffect" min="0" max="100" value="0" step="1" data-effect-type="delayZone"></div>
-                                
-                                <div><label for="bassEq" class="block text-sm font-medium mb-1">Graves (EQ)</label><input type="range" id="bassEq" min="-20" max="20" value="0" step="1" data-effect-type="bassEq"></div>
-                                <div><label for="midEq" class="block text-sm font-medium mb-1">Médios (EQ)</label><input type="range" id="midEq" min="-20" max="20" value="0" step="1" data-effect-type="midEq"></div>
-                                <div><label for="trebleEq" class="block text-sm font-medium mb-1">Agudos (EQ)</label><input type="range" id="trebleEq" min="-20" max="20" value="0" step="1" data-effect-type="trebleEq"></div>
-
                                 <div><label for="volumeEffect" class="block text-sm font-medium mb-1">Volume</label><input type="range" id="volumeEffect" min="0" max="200" value="100" step="1" data-effect-type="volumeZone"></div>
                                 <div><label for="panEffect" class="block text-sm font-medium mb-1">Pan</label><input type="range" id="panEffect" min="-100" max="100" value="0" step="1" data-effect-type="panZone"></div>
                                 <div><label for="vibratoEffect" class="block text-sm font-medium mb-1">Vibrato</label><input type="range" id="vibratoEffect" min="0" max="100" value="0" step="1" data-effect-type="vibratoZone"></div>
-                                <div><label for="lowpassFilterEffect" class="block text-sm font-medium mb-1">Low Pass</label><input type="range" id="lowpassFilterEffect" min="0" max="100" value="100" step="1" data-effect-type="lowpassFilter"></div>
+                                <div><label for="lowpassFilterEffect" class="block text-sm font-medium mb-1">Low Pass</label><input type="range" id="lowpassFilterEffect" min="0" max="100" value="0" step="1" data-effect-type="lowpassFilter"></div>
                                 <div><label for="highpassFilterEffect" class="block text-sm font-medium mb-1">High Pass</label><input type="range" id="highpassFilterEffect" min="0" max="100" value="0" step="1" data-effect-type="highpassFilter"></div>
                                 <div><label for="bandpassFilterEffect" class="block text-sm font-medium mb-1">Band Pass</label><input type="range" id="bandpassFilterEffect" min="0" max="100" value="0" step="1" data-effect-type="bandpassFilter"></div>
                                 <div><label for="notchFilterEffect" class="block text-sm font-medium mb-1">Notch</label><input type="range" id="notchFilterEffect" min="0" max="100" value="0" step="1" data-effect-type="notchFilter"></div>
@@ -132,13 +122,12 @@
                                 <div><label for="chorusEffect" class="block text-sm font-medium mb-1">Chorus</label><input type="range" id="chorusEffect" min="0" max="100" value="0" step="1" data-effect-type="chorus"></div>
                                 <div><label for="distortionEffect" class="block text-sm font-medium mb-1">Distorção</label><input type="range" id="distortionEffect" min="0" max="100" value="0" step="1" data-effect-type="distortion"></div>
                                 <div><label for="compressorEffect" class="block text-sm font-medium mb-1">Compressor</label><input type="range" id="compressorEffect" min="0" max="100" value="0" step="1" data-effect-type="compressor"></div>
-                                <div><label for="gainEffect" class="block text-sm font-medium mb-1">Ganho</label><input type="range" id="gainEffect" min="0" max="200" value="100" step="1" data-effect-type="gain"></div>
                                 <div><label for="tremoloAmplitudeEffect" class="block text-sm font-medium mb-1">Trêm. Amp.</label><input type="range" id="tremoloAmplitudeEffect" min="0" max="100" value="0" step="1" data-effect-type="tremoloAmplitude"></div>
                                 <div><label for="wahEffect" class="block text-sm font-medium mb-1">Wah-Wah</label><input type="range" id="wahEffect" min="0" max="100" value="0" step="1" data-effect-type="wah"></div>
                             </div>
                         </div>
                         <div class="sidebar-section toolbar-panel" data-panel="timbres">
-                            <h2 class="sidebar-title">Timbre (Lápis/Gliss.)</h2>
+                            <h2 class="sidebar-title">Timbre (Lápis/Linha)</h2>
                             <div class="grid grid-cols-2 gap-2">
                                 <button id="sine" class="timbre-btn">Sine</button>
                                 <button id="square" class="timbre-btn">Square</button>
