--- a/manual.html
+++ b/manual.html
@@ -80,7 +80,7 @@
 <body>
 
     <div class="manual-container">
-        <h1>Manual Definitivo do Drawing Music</h1>
+        <h1>Manual Drawing Music</h1>
         <p class="intro-p">Liberte o artista e o músico que há em si. Este guia detalha cada ferramenta, conceito e truque para que possa dominar o Drawing Music e criar composições incríveis.</p>
         
         <div class="section">
